# todolist

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
src/: main.cpp  todo.cpp  todo.h
test/: test_todo.cpp
